# psistats-rs

./: .gitignore  Cargo.toml  Jenkinsfile  LICENSE  README.md  appveyor.yml  plugins.wxs  psistats.toml
examples/reporter_plugin/: Cargo.toml  README.md
examples/reporter_plugin/src/: lib.rs
libpsistats/: Cargo.toml
libpsistats/src/: commands.rs  config.rs  default_registrar.rs  errors.rs  lib.rs  loader.rs  macros.rs  plugin_traits.rs  registrar.rs  reports.rs
oldsrc/: publishers.rs  reporters.rs
oldsrc/publishers/: log.rs  mqtt.rs
oldsrc/reporters/: cpu.rs  mem.rs  os.rs  pingpong.rs
psistats/: Cargo.toml
psistats/src/: config.rs  lib.rs  main.rs
psistats/src/plugins/: api.rs  mod.rs  registry.rs
psistats/src/plugins/weather/: conditions.rs  mod.rs
psistats/src/service/: config.rs  main.rs  manager2.rs  mod.rs  utils.rs  workers.rs
psistats/src/service/manager/: mod.rs  publishers.rs  reporters.rs
psistats/wix/: License.rtf  main.wixproj  main.wxs
psistats_plugins/: README.md
psistats_plugins/cpu/: Cargo.toml  README.md
psistats_plugins/cpu/src/: cpu.rs  lib.rs
psistats_plugins/foobar/: Cargo.toml
psistats_plugins/foobar/src/: lib.rs
psistats_plugins/ipaddrs/: Cargo.toml
psistats_plugins/ipaddrs/src/: lib.rs
psistats_plugins/logger/: Cargo.toml
psistats_plugins/logger/src/: lib.rs
psistats_plugins/memory/: Cargo.toml  README.md
psistats_plugins/memory/src/: lib.rs  memory.rs
psistats_plugins/mqttpub/: Cargo.toml
psistats_plugins/mqttpub/src/: lib.rs
psistats_plugins/os/: Cargo.toml
psistats_plugins/os/src/: lib.rs
psistats_plugins/sensors/: Cargo.toml
psistats_plugins/sensors/src/: lib.rs  lmsensors.rs  ohmsensors.rs  sensors.rs
psistats_plugins/uptime/: Cargo.toml
psistats_plugins/uptime/src/: lib.rs
psistats_plugins/weather_envcanada/: Cargo.toml  README.md
psistats_plugins/weather_envcanada/src/: .lib.rs.swp  lib.rs
psistats_plugins/weather_envcanada/src/envcanada/: mod.rs
psistats_service/: Cargo.toml  build.rs
psistats_service/src/: config.rs  lib.rs  main.rs
psistats_service/src/plugins/: api.rs  loader.rs  mod.rs  registry.rs
psistats_service/src/service/: main.rs  manager.rs  mod.rs
psistats_service/src/service/manager/: publishers.rs  reporters.rs
src/: lib.rs  manager.rs  reporters.rs
src/publishers/: mqtt.rs
src/reporters/: cpu.rs  ip_addrs.rs  mem.rs
systemd/: psistats.service
tmp/: psistats_0.2.0-alpha-5_amd64.deb
wix/: License.rtf  main.wxs  plugin_filter.xsl  psistats-service-winsw.xml  psistats-service.xml
