[workspace]
members = [
    "psistats",
    "psistats_plugins/cpu",
    "psistats_plugins/logger",
    "psistats_plugins/memory",
    "psistats_plugins/ipaddrs",
    "psistats_plugins/weather_envcanada"
]

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true

[profile.release]
opt-level = 2
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false
