[package]
name = "libpsistats"
version = "0.2.0-beta"
license = "MIT"
authors = ["Alex Dow <adow@psikon.com>"]
edition = "2018"
publish = false
include = ["../psistats.toml", "../psistats-service.exe", "../psistats-service.xml"]
description = "Psistats core library including plugin api"
homepage = "https://www.psikon.org"
repository = "https://github.com/psistats/psistats-rs"
readme = "README.md"


[dependencies]
thiserror = "1.0.24"
libloading = "0.7.0"
serde_json = "1.0.64"
serde = { version = "1.0.124", features = ["derive"] }
toml = "0.5.8"
