[package]
name = "psistats"
version = "0.2.0-alpha"
license = "MIT"
authors = ["Alex Dow <adow@psikon.com>"]
edition = "2018"
publish = false
include = ["../psistats.toml", "../psistats-service.exe", "../psistats-service.xml"]
description = "Psistats system metrics reporting tool"
homepage = "https://www.psikon.org"
repository = "https://github.com/psistats/psistats-rs"
readme = "README.md"

[package.metadata.deb]
maintainer = "Alex Dow <adow@psikon.com>"
copyright = "2019, Alex Dow <adow@psikon.com>"
license-file = ["../LICENSE", "0"]
extended-description = """\
A simple system metrics reporting tool"""
# depends = "$auto, systemd"
depends = ""
recommends = "libsensors"
section = "utility"
priority = "optional"
conf-files = ["/etc/psistats/psistats.toml"]
assets = [
    ["target/release/libplugin*.so", "usr/share/psistats", "644"],
    ["target/release/psistats", "usr/bin/", "755"],
    ["../psistats.toml", "etc/psistats/", "644"],
    ["../systemd/psistats.service", "etc/systemd/system/", "644"]
]


[dependencies]
clap = "2.33.0"
lazy_static = "1.4.0"
log = "0.4.14"
os_info = "3.0.1"
pretty_env_logger = "0.4.0"
toml = "0.5.8"
libloading = "0.7"
glob = "0.3.0"
serde = { version = "1.0.124", features = ["derive"] }
crossbeam-channel = "0.5.0"
serde_json = "1.0.64"
gethostname = "0.2.1"
