[package]
name = "example-psistats-reporter"
version = "0.2.0-alpha"
authors = ["Alex Dow <adow@psikon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "plugin_example"

[dependencies]
psistats = { path = "../../psistats" }

[workspace]
