[package]
name = "psistats_plugin_cpu"
version = "0.2.0-alpha"
authors = ["Alex Dow <adow@psikon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "plugin_cpu"

[dependencies]
psistats = { path = "../../psistats" }
crossbeam-channel = "0.4.2"
lazy_static = "1.4.0"
sysinfo = { git = "https://github.com/GuillaumeGomez/sysinfo" }
