[package]
name = "psistats_plugin_ipaddrs"
version = "0.3.0-beta"
authors = ["Alex Dow <adow@psikon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "plugin_ipaddrs"

[dependencies]
libpsistats = { path = "../../libpsistats" }
get_if_addrs = "0.5.3"
