[package]
name = "psistats_plugin_logger"
version = "0.2.0-beta"
authors = ["Alex Dow <adow@psikon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "plugin_logger"

[dependencies]
libpsistats = { path = "../../libpsistats" }
log = "0.4.14"
pretty_env_logger = "0.4.0"

