[package]
name = "psistats_plugin_memory"
version = "0.3.0-beta"
authors = ["Alex Dowgailenko <adow@psikon.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "plugin_memory"

[dependencies]
libpsistats = { path = "../../libpsistats" }
crossbeam-channel = "0.5.0"
lazy_static = "1.4.0"
#sysinfo = { git = "https://github.com/GuillaumeGomez/sysinfo" }
sysinfo = "0.23.11"
