[package]
name = "psistats_plugin_mqttpub"
version = "0.2.0-beta"
authors = ["Alex Dow <adow@psikon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "plugin_mqttpub"

[dependencies]
libpsistats = { path = "../../libpsistats" }
crossbeam-channel = "0.5.0"
lazy_static = "1.4.0"
rumqttc = "0.5.0"
rand = "0.7.3"
toml = "0.5.7"
rustls = "0.19.0"
rustls-native-certs = "0.5.0"
