[package]
name = "psistats_plugin_mqttpub"
version = "0.3.0-beta"
authors = ["Alex Dow <adow@psikon.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "plugin_mqttpub"

[dependencies]
libpsistats = { path = "../../libpsistats" }
crossbeam-channel = "0.5.0"
lazy_static = "1.4.0"
rumqttc = "0.12.0"
rand = "0.8.5"
toml = "0.5.7"
rustls = "0.20.4"
rustls-native-certs = "0.6.2"
crossbeam = "0.8.1"
