[package]
name = "psistats_plugin_sensors"
version = "0.2.0-alpha"
authors = ["Alex Dow <adow@psikon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "plugin_sensors"

[dependencies]
psistats = { path = "../../psistats" }
crossbeam-channel = "0.5.0"
lazy_static = "1.4.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
sensors = "0.2.1"
