[package]
name = "psistats_plugin_sensors"
version = "0.3.0-beta"
authors = ["Alex Dowgailenko <adow@psikon.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "plugin_sensors"

[dependencies]
libpsistats = { path = "../../libpsistats" }
serde = { version = "1.0.124", features = ["derive"] }
lazy_static = "1.4.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
sensors = "0.2.1"


[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.9.3"
crossbeam-channel = "0.5.0"
