[package]
name = "psistats_plugin_uptime"
version = "0.3.0-beta"
authors = ["Alex Dow <adow@psikon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "plugin_uptime"

[dependencies]
libpsistats = { path = "../../libpsistats" }
uptime_lib = "0.2.1"

