[package]
name = "psistats_plugin_weather_envcanada"
version = "0.2.0-alpha"
authors = ["Alex Dow <adow@psikon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "plugin_weather_envcanada"

[dependencies]
psistats = { path = "../../psistats" }
quick-xml = "0.20.0"
reqwest = { version = "0.10.8", features = ["blocking"] }
